# InteractiveGraphicsProject

./: CMakeLists.txt  Project.bat  README.md
res/shaders/: fragShader.frag  fragShader.glsl  vertShader.glsl  vertShader.vert
src/: main.cpp
